--- a/Vebsite/assets/Css/style.css
+++ b/Vebsite/assets/Css/style.css
@@ -473,6 +473,43 @@ body{
 /* Menu */
 
 
+/* features */
+#features {
+    padding: 8vw 9vw 3 8vw;
+    text-align: center;
+  }
+  
+  #features .fea-base {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 1rem;
+    margin-top: 50px;
+  }
+  
+  #features .fea-box {
+    background-color: #151515;
+    padding: 3rem;
+    text-align: start;
+  }
+  
+  #features .fea-box i {
+    font-size: 3.5rem;
+    color: orange;
+  }
+  
+  #features .fea-box h3 {
+    font-size: 2.2rem;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+    padding: 13px 0 7px 0;
+  }
+  
+  #features .fea-box p {
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+  }
+
 
 
 /* footer */
