--- a/Vebsite/assets/Css/style.css
+++ b/Vebsite/assets/Css/style.css
@@ -80,6 +80,7 @@ body{
     margin: 0 1rem;
     font-size: 1.6rem;
     color: #fff;
+    text-decoration: unset;
 }
 
 
@@ -470,15 +471,104 @@ body{
     letter-spacing: 1px;
 }
 
-
-
 /* Menu */
 
 
 
 
 
+.main_bg{
+  background-image: url(../img/background.jpg);
+  max-width: 1440px;
+  height: 800px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.form{
+  width: 650px;
+}
 
+.form-text{
+  text-align: center;
+  margin: 0 0 40px 0;
+}
+.form-text h1 span img{
+  margin: 0 10px;
+
+}
+.form-text h1{
+  color: #fff;
+  font-family: 'Akaya Telivigala', cursive;
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+
+.main-form div{
+  margin: 10px 10px;
+  width: 300px;
+  display: inline-block;
+}
+.main-form div input {
+  width: 100%;
+  font-family: 'Akaya Telivigala', cursive;
+  background: none;
+  border: 1px solid #ffca00;;
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  outline: none;
+  padding: 3px 0 3px 10px;
+  margin-top: 10px;
+}
+.main-form div select{
+  width: 104%;
+  font-family: 'Akaya Telivigala', cursive;
+  background: none;
+  border: 1px solid #ffca00;;
+  font-size: 20px;
+  color: rgb(97, 95, 95);
+  outline: none;
+  padding: 3px 0 3px 10px;
+  margin-top: 10px;
+}
+.main-form div span{
+  width: 100%;
+  font-family: 'Akaya Telivigala', cursive;
+  color: #fff;
+  font-size: 25px;
+}
+
+#submit{
+  width: 100%;
+  text-align: center;
+}
+#submit input{
+  font-family: 'Akaya Telivigala', cursive;
+  width: 200px;
+  background-color: yellow !important;
+  color: black !important;
+  transition: all .3s;
+}
+#submit input:hover{
+  font-family: 'Akaya Telivigala', cursive;
+  width: 200px;
+  background-color: black !important;
+  color: #fff !important;
+}
+#submit input:active{
+  font-size: 19px;
+  background-color: rgb(46, 20, 5) !important;
+  color: #fff !important;
+}
+
+
+@media screen and (max-width:710px) {
+  .main-form{
+      text-align: center;
+  }
+}
 
 
 
